--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "cookies": "^0.8.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.1",
+    "js-cookie": "^2.2.1",
+    "js-sha1": "^0.6.0",
+    "swiper": "^5.4.3",
     "vue": "^2.6.11",
+    "vue-amap": "^0.5.10",
+    "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
